--- a/templates/design.html
+++ b/templates/design.html
@@ -1,4 +1,5 @@
 {% extends "common.html" %}
+{% load static %}
 
 {% block head %}
 
@@ -7,5 +8,153 @@
 {% block title %}Дом-Баня - Проектирование{% endblock %}
 
 {% block content %}
-<h1 class="heading heading--h1">Проектирование</h1>
+<section class="promo promo--design">
+  <article class="promo__wrapper ">
+    <p class="promo__text text text--white text--uppercase">
+      Строительство любого дома начинается с проектирования
+    </p> 
+
+    <h1 class="promo__heading heading heading--h1 heading--uppercase heading--white">
+      Проектирование
+    </h1>
+    <p class="promo__text text text--white">
+      Если у вас есть идеи каким должен быть дом вашей мечты, 
+      <br>наши проектировщики помогут вам реализовать вашу идею 
+      <br>или предложат свою.
+    </p>
+  </article>
+</section>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Наши основные проекты</h2>
+      <p class="text text--center text--big text--padding-bottomBig">
+        Мы воплотим в проекте все ваши пожелания, ожидания и сделаем это качественно.
+      </p>
+    </div>
+  </article>
+  <article class="grid__article grid__article--four">
+    <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
+      <a class="preview preview--height100" href="#TODO">
+        <picture class="img img__design--preview">
+          <img src="{% static 'img/desing-houses-0-100.jpg' %}" alt="Дом из клеенного бурса площадью менне 100 метров квадратных" class="img__img preview__img">
+        </picture>
+        <p class="text text--sm text--padding-topBig">Стоимость: 500 ₽/м<sup class="text__sup">2</sup></p>
+        <h5 class="heading heading--h4 heading--left heading--paddingBottom-10 heading__designpage--preview">Проекты домов от&nbsp;0 до 100&nbsp;м<sup class="text__sup">2</sup></h5>
+        <span class="button button--bold button--big button--alt button--marginTop-15 button--toBottom"><span>Все проекты до 100&nbsp;м<sup class="text__sup">2</sup></span></span>
+      </a>
+    </div>
+
+    <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
+      <a class="preview preview--height100" href="#TODO">
+        <picture class="img img__design--preview">
+          <img src="{% static 'img/desing-houses-100-200.jpg' %}" alt="Дом из клеенного бурса площадью от 100 до 200 метров квадратных" class="img__img preview__img">
+        </picture>
+        <p class="text text--sm text--padding-topBig">Стоимость: 500 ₽/м<sup class="text__sup">2</sup></p>
+        <h5 class="heading heading--h4 heading--left heading--paddingBottom-10 heading__designpage--preview">Проекты домов от&nbsp;101 до 200&nbsp;м<sup class="text__sup">2</sup></h5>
+        <span class="button button--bold button--big button--alt button--marginTop-15 button--toBottom"><span>Все проекты от 100&nbsp;м<sup class="text__sup">2</sup></span></span></a>
+    </div>
+
+    <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
+      <a class="preview preview--height100" href="#TODO">
+        <picture class="img img__design--preview">
+          <img src="{% static 'img/desing-houses-201.jpg' %}" alt="Дом из клеенного бурса площадью более 200 метров квадратных" class="img__img preview__img">
+        </picture>
+        <p class="text text--sm text--padding-topBig">Стоимость: 500 ₽/м<sup class="text__sup">2</sup></p>
+        <h5 class="heading heading--h4 heading--left heading--paddingBottom-10 heading__designpage--preview">Проекты домов от&nbsp;201&nbsp;м<sup class="text__sup">2</sup> и больше</h5>
+        <span class="button button--bold button--big button--alt button--marginTop-15 button--toBottom"><span>Все проекты от 201&nbsp;м<sup class="text__sup">2</sup></span></span></a>
+
+    </div>
+
+    <div class="grid__element grid__element--marginBottom-medium grid__element--marginTop-medium">
+      <a class="preview preview--height100" href="#TODO">
+        <picture class="img img__design--preview">
+          <img src="{% static 'img/desing-saunas.jpg' %}" alt="Баня из клеенного бруса" class="img__img preview__img">
+        </picture>
+        <p class="text text--sm text--padding-topBig">Стоимость: 500 ₽/м<sup class="text__sup">2</sup></p>
+        <h5 class="heading heading--h4 heading--left heading--paddingBottom-10 heading__designpage--preview">Проекты бань на любой вкус</h5>
+        <span class="button button--bold button--big button--alt button--marginTop-15 button--toBottom">Все проекты бань</span></a>
+    </div>
+  </article>
+</section>
+
+<div class="hr"></div>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Наши проектировщики</h2>
+      <p class="text text--center">
+        Мы не просто подготовим проект дома, это будет проект с учётом всех ваших пожеланий и мечт, комфортный именно для вас.
+      </p>
+      <picture class="img img--round">
+        <img src="{% static 'img/team/igor-victor-round.png' %}" alt="Руководитель проектного отдела Игорь Викторович" class="img__img img__img--team">
+      </picture>
+      <h5 class="heading heading--h5 heading--paddingBottom-5">Игорь Викторович</h5>
+      <p class="text text--sm text--sm-center text--grey text--nopadding">Руководитель проектного отдела</p>
+    </div>
+  </article>
+</section>
+
+<div class="hr"></div>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Проектные работы включают в себя:</h2>
+      <p class="text text--left text--sm">
+        <ul class="list list--unordered">
+          <li class="list__item list__item--unordered">
+            <h5 class="heading heading--h5 heading--left heading--paddingBottom-5 heading--bold">Архитектурный проект с конструкционной частью</h5>
+            <p class="text text--sm">Минимальная стоимость проекта 35.000 ₽.для проектов до 70 м<sup class="text__sup">2</sup>.
+              <br>Для проектов более 70 м² стоимость рассчитывается по 500 ₽/м<sup class="text__sup">2</sup>.</p>
+          </li>
+          <li class="list__item list__item--unordered">
+            <h5 class="heading heading--h5 heading--left heading--paddingBottom-5 heading--bold">Планировочные решения с конструкционной частью</h5>
+            <p class="text text--sm">Включают в себя максимально полный перечень документации необходимый для осуществления строительства с последующей продолжительной эксплуатацией.</p>
+          </li>
+        </ul>
+      </p>
+    </div>
+  </article>
+</section>
+
+<div class="hr"></div>
+
+<section class="grid">
+  <article class="grid__article grid__article--three grid__article--gap-none">
+    <div class="grid__element grid__element--wide grid__element--marginBottom-medium">
+      <h2 class="heading heading--h2">Состав проектной документации:</h2>
+    </div>
+    <div class="grid__element "> 
+        <ul class="text text--left ">
+          <li>Титульный лист</li>
+          <li>Содержание проекта</li>
+          <li>План фундамента</li>
+          <li>Планы этажей</li>
+          <li>Фасады (4 шт.)</li>
+          <li>Разрезы</li>
+        </ul>
+    </div>
+    <div class="grid__element "> 
+        <ul class="text text--left ">
+          <li>Планы раскладки балок перекрытий</li>
+          <li>Планы раскладки стропил</li>
+          <li>Планы раскроя кровли</li>
+          <li>Общий вид (аксиометрия)</li>
+          <li>Все необходимые узлы</li>
+        </ul>
+    </div>
+    <div class="grid__element "> 
+      <ul class="text text--left ">
+        <li>Спецификация оконных и деревянных блоков</li>
+        <li>Спецификация балок перекрытий</li>
+        <li>Спецификация стропил</li>
+        <li>Общий вид (сруб)</li>
+        <li>Развёртка стен по осям</li>
+      </ul>
+    </div>
+  </article>
+</section>
 {% endblock content %}
