--- a/templates/production.html
+++ b/templates/production.html
@@ -1,4 +1,5 @@
 {% extends "common.html" %}
+{% load static %}
 
 {% block head %}
 
@@ -7,5 +8,83 @@
 {% block title %}Дом-Баня - Производство{% endblock %}
 
 {% block content %}
-<h1 class="heading heading--h1">Производство</h1>
+<section class="promo promo--production">
+  <article class="promo__wrapper ">
+    <p class="promo__text text text--white text--uppercase">
+      Технология производства
+    </p>
+
+    <h1 class="promo__heading heading heading--h1 heading--white">
+      Клееный брус от производителя
+    </h1>
+    <p class="promo__text text text--white">
+      Рассмотрим краткую справку, особенности и преимущества <br>этого стоительного материала.
+    </p>
+  </article>
+</section>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Краткая справка о технологии</h2>
+      <p class="text text--left text--sm">
+        <span class="text--big text--left text--float-right">Клееный брус прочнее цельного бруса, содержит минимальное количество влаги и дает существенно меньшую усадку.</span>
+        Промышленное производство клееного бруса было налажено всего 30 лет назад. Технология его изготовления во многом схожа с производством фанеры. В том и другом случае готовое изделие состоит из склеенных между собой элементов: в фанере это шпон, а в брусе — доска-ламель. С самого начала своего поступления на рынок стройматериалов клееный брус стал пользоваться популярностью у потребителей. Он прочнее цельного бруса, содержит минимальное количество влаги и дает существенно меньшую усадку.
+       </p>
+       <p class="text text--left text--sm">
+        Как показала практика, с клееным брусом удобнее работать, а его функциональные свойства превосходят цельную древесину:
+        <ul class="text text--left text--sm list--paddingTop-none list--paddingBottom-none">
+          <li>Отсутствует естественная усушка и деформация;</li>
+          <li>Со временем клееный брус не растрескивается;</li>
+          <li>Поверхность материала очень ровная и не требует отделки и дополнительной обработки;</li>
+          <li>На протяжении всего эксплуатационного периода уровень влажности бруса поддерживается на оптимальном уровне, не создаются благоприятные условия для размножения бактерий и грибка;</li>
+          <li>Характеристики клееного бруса допускают его использование во время реализации строительных проектов любой сложности.</li>
+        </ul>
+      </p>
+    </div>
+  </article>
+</section>
+
+<div class="hr"></div>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Преимущества клееного бруса</h2>
+      <p class="text text--center">
+        Приведём самые основные, на наш взгляд:
+      </p>
+      <ul class="list list--unordered">
+        <li class="list__item list__item--unordered">
+          <h5 class="heading heading--h5 heading--left heading--paddingBottom-5 heading--bold">Готовый красивый фасад</h5>
+          <p class="text text--sm">После завершения основных строительных работ не требуется отделка фасада или устранение незначительных дефектов в виде трещин.</p>
+        </li>
+        <li class="list__item list__item--unordered">
+          <h5 class="heading heading--h5 heading--left heading--paddingBottom-5 heading--bold">Теплые и гидроизолированные стены</h5>
+          <p class="text text--sm">После завершения основных строительных работ не требуется утепление и гидроизоляция стен.</p>
+        </li>
+        <li class="list__item list__item--unordered">
+          <h5 class="heading heading--h5 heading--left heading--paddingBottom-5 heading--bold">Сниженные расходы и себестоимость</h5>
+          <p class="text text--sm">Из первых пунктов следует существенное снижение расходов на строительство и ощутимое снижение себестоимости дома.</p>
+        </li>
+      </ul>
+    </div>
+  </article>
+</section>
+
+<div class="hr"></div>
+
+<section class="grid">
+  <article class="grid__article">
+    <div class="grid__element grid__element--wide">
+      <h2 class="heading heading--h2">Клей для клееного бруса</h2>
+      <p class="text text--left text--sm">
+        <span class="text--xbig text--left text--float-right">Количество клея, температура и влажность воздуха внутри производственного помещения тщательно контролируются.<br></span>
+        Для изготовления клееного бруса задействуется натуральная древесина, прошедшая через предварительную просушку. В целях обеспечения высокой прочности материала применяется особая технология склейки и укладки досок.
+        <br>В процессе производства используется высококачественный клеящий состав, гарантирующий долговечность изделия.
+        <br>При изготовлении клееного бруса рекомендовано применение любой модификации однокомпонентного клея, предназначенного для гражданского строительства. Подобный тип клеящего состава характеризуется повышенной адгезией, позволяющей ему глубже впитываться в древесные волокна с последующей кристаллизацией и образованием прочных связей между соседними досками. Поскольку в процессе нанесения однокомпонентного клея в воздух испаряются вредные химические соединения, работники, выполняющие данную технологическую операцию, должны использовать соответствующие средства защиты. После завершения кристаллизации, как подтвердили многочисленные лабораторные испытания, клей становится абсолютно безопасным для человеческого здоровья.
+      </p>
+    </div>
+  </article>
+</section>
 {% endblock content %}
