update: houses/models, hs/views, 404, 500 templates add utility.py

--- a/templates/500.html
+++ b/templates/500.html
@@ -4,11 +4,13 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - О нас{% endblock %}
+{% block title %}Дом Баня - О нас{% endblock %}
 
 {% block content %}
 <h1 class="heading heading--h1">Ошибка на сервере</h1>
 <p class="text">
   У нас что-то пошло не так, пожалуйста, вернитесь на главную и попробуйте снова.<br>
+  {{ exception }}
+  <br>
   <a href="/" class="text__link">На главную</a></p>
 {% endblock content %}
