--- a/templates/common.html
+++ b/templates/common.html
@@ -7,7 +7,7 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' ; style-src 'self' 'unsafe-inline';"> -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Дом-Баня{% endblock %}</title>
+  <title>{% block title %}Дом Баня{% endblock %}</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
   {% block head %}
