--- a/templates/design.html
+++ b/templates/design.html
@@ -5,7 +5,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - Проектирование{% endblock %}
+{% block title %}Дом Баня - Проектирование{% endblock %}
 
 {% block content %}
 <section class="promo promo--design">
