--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "common.html" %}
 {% load static %}
 
-{% block title %} Дом-Баня - Добро пожаловать!{% endblock %}
+{% block title %} Дом Баня - Добро пожаловать!{% endblock %}
 
 {% block head %}
 <meta name="description" content="ДомБаня - Дома и бани из клееного бруса. Мы сторим дома из клееного бруса для постояного проживания 
@@ -147,7 +147,7 @@
         <div class="quote__wrapper">
           <h3 class="heading heading--h3">Маргарита Гибадуллина</h3>
           <p class="quote__subHeading">
-            Заслуженная артистка России и её дом-баня из клееного бруса.
+            Заслуженная артистка России и её Дом Баня из клееного бруса.
           </p>
           <p class="content-slider__text text text--sm">
             Главное человек! Это очень редкие качества для строителя: пунктуальный, документальный, чистоплотный, всё в срок.<br>
@@ -177,7 +177,7 @@
         <div class="quote__wrapper">
           <h3 class="heading heading--h3">Анатолий Александрович</h3>
           <p class="quote__subHeading">
-            Руководитель организации и его дом-баня из клееного бруса.
+            Руководитель организации и его Дом Баня из клееного бруса.
           </p>
           <p class="content-slider__text text text--sm">
             Сделали быстро, качественно. Я сам занимаюсь деревом, сделали всё грамотно. Всем советую.<br>
