--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -5,7 +5,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - Наши проекты{% endblock %}
+{% block title %}Дом Баня - Наши проекты{% endblock %}
 
 {% block content %}<section class="content-slider content-slider--top">
   <div class="content-slider__control content-slider__control-left"></div>
