--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - О нас{% endblock %}
+{% block title %}Дом Баня - О нас{% endblock %}
 
 {% block content %}
 <section class="promo promo--about">
@@ -96,7 +96,7 @@
       <div class="quote__wrapper">
         <h3 class="heading heading--h3">Маргарита Гибадуллина</h3>
         <p class="quote__subHeading">
-          Заслуженная артистка России и её дом-баня из клееного бруса.
+          Заслуженная артистка России и её Дом Баня из клееного бруса.
         </p>
         <p class="content-slider__text text text--sm">
           Главное человек! Это очень редкие качества для строителя: пунктуальный, документальный, чистоплотный, всё в срок.<br>
@@ -126,7 +126,7 @@
       <div class="quote__wrapper">
         <h3 class="heading heading--h3">Анатолий Александрович</h3>
         <p class="quote__subHeading">
-          Руководитель организации и его дом-баня из клееного бруса.
+          Руководитель организации и его Дом Баня из клееного бруса.
         </p>
         <p class="content-slider__text text text--sm">
           Сделали быстро, качественно. Я сам занимаюсь деревом, сделали всё грамотно. Всем советую.<br>
