--- a/templates/policy.html
+++ b/templates/policy.html
@@ -4,7 +4,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - Политика конфиденциальности{% endblock %}
+{% block title %}Дом Баня - Политика конфиденциальности{% endblock %}
 
 {% block content %}
 
