--- a/templates/production.html
+++ b/templates/production.html
@@ -5,7 +5,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - Производство{% endblock %}
+{% block title %}Дом Баня - Производство{% endblock %}
 
 {% block content %}
 <section class="promo promo--production">
