--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -5,7 +5,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - {{structure.title}} {{structure.square}}м²{% endblock %}
+{% block title %}Дом Баня - {{structure.title}} {{structure.square}}м²{% endblock %}
 
 {% block content %}
 
