--- a/templates/submit.html
+++ b/templates/submit.html
@@ -4,7 +4,7 @@
 
 {% endblock head%}
 
-{% block title %}Дом-Баня - Форма отправлена{% endblock %}
+{% block title %}Дом Баня - Форма отправлена{% endblock %}
 
 {% block content %}
 <section class="grid">
