feat: add new ProjectView, update IndexView with Projects initial

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,8 +136,8 @@
 
   <div class="hr"></div>
 
-  <section class="content-slider">
-    <h2 class="heading heading--h2 heading--bold heading--paddingTop-50 heading--center">
+  <section class="grid content-slider">
+    <h2 class="heading heading--h2 heading--bold heading--center">
       Отзывы наших клиентов
     </h2>
     <div class="content-slider__control content-slider__control--quote content-slider__control-left"></div>
